AV2 Changelog :: version a4.6

* Halved flamethrower chi drain
* Can't summon flying bison if it is nearby (20 blocks)

> Fix bug where bending is still disabled when jumping out of water skate
> Fix bug where other players can't mount their friend's bison
> Fix mine_blocks ability not affecting fortune
> Fix water arcs still able to be gotten from empty cauldrons
> Fix pickup block Explosions happening 100% of the time(instead of 50%)